[package]
name = "ldk-tutorial-node"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { path="./rust-lightning/lightning", features = ["max_level_trace"] }
lightning-block-sync = {path="./rust-lightning/lightning-block-sync", features = [ "rpc-client" ] }
lightning-invoice = { path="./rust-lightning/lightning-invoice" }
lightning-net-tokio = { path="./rust-lightning/lightning-net-tokio" }
lightning-persister = { path="./rust-lightning/lightning-persister" }
lightning-background-processor = {  path="./rust-lightning/lightning-background-processor" }

base64 = "0.13.0"
bitcoin = "0.27"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"

futures = "0.3"
chrono = "0.4"
rand = "0.4"
serde_json = { version = "1.0" }
serde = { version = "1.0.136" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

rusqlite = { version = "0.27.0", features = ["bundled"] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
