[package]
name = "ldk-tutorial-node"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ldk-sample"
path = "src/main.rs"

[[bin]]
name = "scraper"
path = "src/scraper/main.rs"

[dependencies]
lightning = { path="./rust-lightning/lightning", features = ["max_level_trace"] }
lightning-block-sync = {path="./rust-lightning/lightning-block-sync", features = [ "rpc-client" ] }
lightning-invoice = { path="./rust-lightning/lightning-invoice" }
lightning-net-tokio = { path="./rust-lightning/lightning-net-tokio" }
lightning-persister = { path="./rust-lightning/lightning-persister" }
lightning-background-processor = {  path="./rust-lightning/lightning-background-processor" }

base64 = "0.13.0"
bitcoin = "0.27"
bitcoin-bech32 = "0.12"
libc = "0.2"
bech32 = "0.8"
hex = "0.3"

futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.4"
csv = "1.1"
serde_json = { version = "1.0" }
serde = { version = "1.0.136", features = ["derive"]}
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

rusqlite = { version = "0.27.0", features = ["bundled", "chrono"] }

reqwest = "0.11.10"
anyhow = "1.0.56"

ctrlc = { version = "3.0", features = ["termination"] }

[profile.release]
panic = "abort"
debug = true


[profile.dev]
panic = "abort"
